# microservices/quality-gate-api/src/main/java/io/github/bbortt/snow/white/microservices/quality/gate/api/domain/model/QualityGateConfiguration.java
@@ -75,6 +75,11 @@ public class QualityGateConfiguration {
   @Column(nullable = false, updatable = false)
   private Boolean isPredefined = false;
 
+  @NonNull
+  @Builder.Default
+  @Column(nullable = false)
+  private Integer minCoveragePercentage = 100;
+
   @Setter
   @NonNull
   @Builder.Default
